k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app-namespace
  labels:
    name: flask-app-namespace
    environment: production
